[package]
name = "mgit"
version = "0.4.0-a0"
authors = ["Joe Joyce <joe@decafjoe.com>"]

[dependencies]
ansi_term = "~0.11.0"
chan = "~0.1.23"
chan-signal = "~0.3.1"
clap = { version = "~2.32.0", features = ["wrap_help"] }
crossbeam = "~0.5.0"
git2 = "~0.7.1"
indexmap = "~1.0.2"
pager = "~0.15.0"
rust-ini = "~0.13.0"
termion = "~1.5.1"
users = "~0.8.1"
walkdir = "~2.2.7"
