[package]
name = "mgit"
version = "0.4.0-a0"
authors = ["Joe Joyce <joe@decafjoe.com>"]

[dependencies]
ansi_term = "~0.11.0"
clap = { version = "~2.32.0", features = ["wrap_help"] }
crossbeam = "~0.5.0"
crossbeam-channel = "~0.3.3"
git2 = "~0.7.1"
indexmap = "~1.0.2"
libc = "~0.2.45"
nix = "~0.12.0"
rust-ini = "~0.13.0"
signal-hook = "~0.1.6"
termion = "~1.5.1"
users = "~0.8.1"
walkdir = "~2.2.7"
